Fix inline-checkbox title wrapping issue
Fixes RM-22104

--- a/axelor-web/src/main/webapp/css/view.form.checkbox.css
+++ b/axelor-web/src/main/webapp/css/view.form.checkbox.css
@@ -200,3 +200,8 @@
   margin: 4px 0 !important;
   float: left;
 }
+
+.checkbox-inline .ibox .title {
+  width: calc(100% - 28px);
+  display: inline-block;
+}
